# ai-powered-personalized-recipe-generator

./: README.md
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  README.md  example.env  pyproject.toml
backend/config/: settings.py  urls.py
backend/recipes/: authentication.py  serializers.py  tests.py  urls.py  views.py
backend/recipes/management/commands/: apply_supabase_schema.py
backend/recipes/services/: __init__.py  recipe_generator.py  repositories.py  supabase_client.py
backend/recipes/sql/: 0001_initial_schema.sql
docs/: google-oauth-setup.md  project-plan.md  supabase-setup.md  vercel-deployment-checklist.md
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/saved-recipes/: page.tsx
frontend/src/components/: ErrorSuppressor.tsx  FloatingLabelTextField.tsx  Navbar.tsx  ThemeToggle.tsx  UserMenu.tsx
frontend/src/components/auth/: AuthForm.tsx  LoginForm.tsx
frontend/src/components/dashboard/: AvatarSelector.tsx  HistoryPanel.tsx  ProfilePanel.tsx  RecipePlanner.tsx  SavedRecipesPanel.tsx
frontend/src/components/providers/: I18nProvider.tsx  SupabaseProvider.tsx  ThemeProvider.tsx
frontend/src/i18n/: config.ts  i18n.ts
frontend/src/i18n/locales/: de.json  (+10 more)
frontend/src/lib/: api-client.ts  auth-redirect.ts
projects/ai-powered-personalized-recipe-generator/frontend/: example.env  package.json
(+14 files in other folders)
